kyy-k8s-config/src/app/website/website-music/website-music-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website-music
  name: website-music
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: website-music
